# encoders

./: README.md  pyproject.toml
src/encoders/: encoder.py  extracted_encoder_utils.py
tests/: conftest.py  test_encoder_utils.py
